Initial integration scaffold

--- a/homeassistant/components/screenlogic/manifest.json
+++ b/homeassistant/components/screenlogic/manifest.json
@@ -4,8 +4,11 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/screenlogic",
   "requirements": [
-    "git+https://github.com/dieselrabbit/screenlogicpy.git@dev#screenlogicpy==0.0.3"
+    "screenlogicpy==1.0.0"
   ],
+  "ssdp": [],
+  "zeroconf": [],
+  "homekit": {},
   "dependencies": [],
   "codeowners": [
     "@dieselrabbit"
