Small cleanups for Home Assistant standards
- dhcp discovery
- Meet config entry unique id requirements
- Fix switch and water heater doing I/O in the event loop
- Store data by entry_id instead of unique_id
- Only use device class if validated
- DRY
- Make unique id meet https://developers.home-assistant.io/docs/entity_registry_index/#unique-id-requirements
- Remove unless __init__ delegation that pylint complained about

--- a/homeassistant/components/screenlogic/manifest.json
+++ b/homeassistant/components/screenlogic/manifest.json
@@ -4,8 +4,8 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/screenlogic",
   "requirements": ["screenlogicpy==0.1.0"],
-  "dependencies": [],
   "codeowners": [
     "@dieselrabbit"
-  ]
+  ],
+  "dhcp": [{"hostname":"pentair: *","macaddress":"00C033*"}]
 }
